feat: 1、实现雪花算法测试 2、实现商品新增 3、实现商品查询 4、实现商品更新

--- a/changgou_service/changgou_service_goods/src/main/resources/application-dev.yml
+++ b/changgou_service/changgou_service_goods/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: goods
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.200.128:3306/changgou_goods?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://192.168.200.128:3306/changgou_goods?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
     username: root
     password: root
   main:
@@ -37,3 +37,5 @@ hystrix:
           thread:
             # 熔断器超时时间，默认：1000/毫秒
             timeoutInMilliseconds: 20000
+workerId: 0
+datacenterId: 0
