--- a/changgou_service/changgou_service_business/src/main/resources/application-test.yml
+++ b/changgou_service/changgou_service_business/src/main/resources/application-test.yml
@@ -1,17 +1,15 @@
 server:
-  port: 9001
+  port: 9004
 spring:
   application:
-    name: goods
+    name: business
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.200.128:3306/changgou_goods?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2b8
+    url: jdbc:mysql://192.168.200.128:3306/changgou_business?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: root
   main:
     allow-bean-definition-overriding: true #当遇到同样名字的时候，是否允许覆盖注册
-  rabbitmq:
-    host: 192.168.200.128
 eureka:
   client:
     service-url:
@@ -39,5 +37,3 @@ hystrix:
           thread:
             # 熔断器超时时间，默认：1000/毫秒
             timeoutInMilliseconds: 20000
-workerId: 0
-datacenterId: 0
