--- a/changgou_service/changgou_service_goods/pom.xml
+++ b/changgou_service/changgou_service_goods/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>changgou_service_goods_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
