--- a/changgou_service/changgou_service_search/pom.xml
+++ b/changgou_service/changgou_service_search/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>changgou_service_business</artifactId>
+    <artifactId>changgou_service_search</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.changgou</groupId>
-            <artifactId>changgou_common_db</artifactId>
+            <artifactId>changgou_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -22,18 +22,22 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.changgou</groupId>
-            <artifactId>changgou_service_business_api</artifactId>
+            <artifactId>changgou_service_goods_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou_service_search_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.9.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
     </dependencies>
 
