--- a/changgou_service/changgou_service_page/src/main/resources/application-dev.yml
+++ b/changgou_service/changgou_service_page/src/main/resources/application-dev.yml
@@ -32,4 +32,4 @@ hystrix:
         isolation:
           strategy: SEMAPHORE
 # 生成静态页的位置
-pagepath: E:\changgou_class\changgou_parent_362\changgou_service\changgou_service_page\src\main\resources\static\detail
+pagepath: E:\changgou_class\changgou_parent_362\changgou_service\changgou_service_page\src\main\resources\templates\detail
