--- a/changgou_service/changgou_service_order/pom.xml
+++ b/changgou_service/changgou_service_order/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>changgou_service_goods_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
