--- a/changgou_service/changgou_service_order/pom.xml
+++ b/changgou_service/changgou_service_order/pom.xml
@@ -31,10 +31,19 @@
             <artifactId>changgou_service_goods_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou_service_pay_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
     </dependencies>
 
