--- a/changgou_service/changgou_service_order/pom.xml
+++ b/changgou_service/changgou_service_order/pom.xml
@@ -18,12 +18,21 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.changgou</groupId>
             <artifactId>changgou_service_order_api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou_service_pay_api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
