feat:实现秒杀首页时间菜单显示

--- a/changgou_gateway/changgou_gateway_web/src/main/resources/application.yml
+++ b/changgou_gateway/changgou_gateway_web/src/main/resources/application.yml
@@ -57,7 +57,7 @@ spring:
         - StripPrefix=1
       #秒杀渲染微服务
       - id: changgou_seckill_web_route
-        uri: lb://webseckill-web
+        uri: lb://seckill-web
         predicates:
         - Path=/api/wseckillgoods/**
         filters:
