--- a/changgou_gateway/changgou_gateway_web/src/main/resources/application.yml
+++ b/changgou_gateway/changgou_gateway_web/src/main/resources/application.yml
@@ -50,16 +50,16 @@ spring:
         - StripPrefix=1
       #秒杀微服务
       - id: changgou_seckill_route
-        uri: lb://webseckill
+        uri: lb://seckill
         predicates:
-        - Path=/api/webseckill/**
+        - Path=/api/seckillgoods/**,/api/seckillorder/**
         filters:
         - StripPrefix=1
       #秒杀渲染微服务
       - id: changgou_seckill_web_route
         uri: lb://seckill-web
         predicates:
-        - Path=/api/wseckillgoods/**
+        - Path=/api/wseckillgoods/**,/api/wseckillorder/**
         filters:
         - StripPrefix=1
   redis:
